# insurance_claim_prediction

./: README.md  pyproject.toml  requirements.txt
src/: data_processing.py  model.py  train.py
src/.ipynb_checkpoints/: main-checkpoint.ipynb
